@@ -1,3 +1,6 @@
+r39:
++ Added isPairColliding method to test collision between two objects.
+
 r38:
 + Fixed a memory bug in the CIrrBPWorld class. It caused a heap corruption after inserting a constraint.
 
